manifests/database/mariadb-standalone/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb-standalone
  namespace: mariadb-standalone
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mariadb
  policyTypes:
    - Ingress
    - Egress
    - remote-node
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              mariadb-client: "true"
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: phpmyadmin
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: uptime-kuma
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: vaultwarden
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: ucdialplans
      ports:
        - port: 3306
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              mariadb-client: "true"
      ports:
        - port: 3306
    - to:
        - ipBlock:
            cidr: 192.18.153.11/32
      ports:
        - port: 3306
